tests/fixtures/invalid/void_cast_missing_operand.c
int main(void) {
    (void);
    return 0;
}
